# bank-scrape

./: .gitignore  LICENSE  README.md  decrypt-all.ipynb  parse.ipynb  parse_bca_credit.py  parse_bca_debit.py  pyproject.toml  util.py
src/bank-scrape/: parse_jenius_credit.py
src/bank_scrape/: bca_credit.py  bca_debit.py  jenius_credit.py
src/bank_scrape/utils/: common.py
