[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rdxz2-bank-scrape"
version = "0.0.1"
authors = [
  { name="Richard Dharmawan", email="richard.dharmawan@gmail.com" },
]
description = "Just scraping bank transaction documents"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "PyPDF2>=3.0.1,<4",
  "pycryptodome>=3,<4",
  "pydantic>=2,<3",
]
